k8s/cloudflare-ddns-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: cloudflare-ddns
  name: cloudflare-ddns
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: cloudflare-ddns
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.21.0 ()
      creationTimestamp: null
      labels:
        io.kompose.service: cloudflare-ddns
    spec:
      containers:
      - env:
        - name: API_KEY
          value: xxxxxxx
        - name: PROXIED
          value: "false"
        - name: SUBDOMAIN
          value: home
        - name: ZONE
          value: minibloks.com
        image: oznu/cloudflare-ddns:latest
        imagePullPolicy: ""
        name: cloudflare-ddns
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
