k8s/grafana-tls-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: grafana-tls-ingress
  namespace: grafana
  annotations:
    kubernetes.io/ingress.class: "traefik"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
  - host: grafana.minibloks.com
    http:
      paths:
      - path: /
        backend:
          serviceName: grafana
          servicePort: 80
  tls:
  - hosts:
    - grafana.minibloks.com
    secretName: grafana-minibloks-com-tls
